@@ -93,6 +93,10 @@ VOIKKOEXPORT int voikko_set_bool_option(int /*handle*/, int option, int value) {
 			if (value) voikko_options.accept_unfinished_paragraphs_in_gc = 1;
 			else voikko_options.accept_unfinished_paragraphs_in_gc = 0;
 			return 1;
+		case VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC:
+			if (value) voikko_options.accept_bulleted_lists_in_gc = 1;
+			else voikko_options.accept_bulleted_lists_in_gc = 0;
+			return 1;
 		case VOIKKO_OPT_HYPHENATE_UNKNOWN_WORDS:
 			if (value) voikko_options.hyphenate_unknown_words = 1;
 			else voikko_options.hyphenate_unknown_words = 0;
