@@ -1,4 +1,4 @@
-.TH VOIKKOGC 1 "2008-10-11"
+.TH VOIKKOGC 1 "2009-03-28"
 .SH NAME
 voikkogc \- test program for Voikko grammar checker
 .SH SYNOPSIS
@@ -25,6 +25,8 @@ is a possibly correct (but probably this and the next identified sentence should
 .BI accept_titles= n
 .TP
 .BI accept_unfinished_paragraphs= n
+.TP
+.BI accept_bulleted_lists= n
 .br
 Set the value of the specified boolean option.
 .TP
